Jun 20, 2023
  ontologies, genes, qtls, markers: JBrowse2 files for rn6, rn5 and rn4
  bam conf generator: helper to generate JBrowse2 config info for a set of bam files

Jun 15, 2023
  agr gff3: updated assembly names for rat and human in gff3 headers

Jun 09, 2023
  ontologies, genes, qtls, markers: JBrowse2 files for rn7

Jun 06, 2023
  ensembl-prep: updated config to download gff3 files from Ensembl release 109 (instead of 106, as it was previously)

May 12, 2023
  genes: generates '_genes_only' and _genes_and_transcripts' files
  genes: updated loading of genes tracks into JBrowse

May 01, 2023
  genes, strains, qtls: removed generation of RatMine files (due to RatMine discontinuation)
  Gff3ColumnWriter: implemented compression in 'gz' (gzip) format or 'bgzf' (bgzip) format
     by default, the compression will be in 'bgzf' format

Jan 30, 2023
  markers: removed generation of RatMine files (due to RatMine discontinuation)

Jan 13, 2023
  updated build.gradle to be gradle 6.x + compatible

Oct 31, 2022
  genes: added sorting of lines, to be tabix-ready (gff3 file will be instantly ready to be used by tabix)
  Gff3ColumnWriter: better reporting of features with start pos > stop pos

Oct 27, 2022
  agr: added handling of tr biotype 'protein_coding_CDS_not_defined'

Oct 18, 2022
  fixed typo in config for loading rn7 gene tracks

Oct 17, 2022
  fixed typo in JBrowse loading script

Sep 21, 2022
  load positions for UTH assemblies from gff3 file

Sep 12, 2022
  new tool to prep UTH gff3 files

Sep 12, 2022
  gff3 tracks for CHEBI are generated only for rat, mouse and human (there is very little data available for other species)
  JBrowse: loads CHEBI tracks only for rat, mouse and human

Sep 09, 2022
  jbrowse scripts: changed JBrowse-1.16.3 into JBrowse-1.16.11 to avoid perl problems on new machine

Aug 08, 2022
  agr: fix in tr biotype processing

Jul 07, 2022
  agr: tr biotype: fix for genes of type 'gene'
  agr: updated header for generated gff3 files
